put all the assets in the public directory and corrected the footer distorted height

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -254,7 +254,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 32em;
+  height: fit-content;
   margin-block-start: 2em;
   border-radius: 8px;
   background-color: whitesmoke;
